# gblock-detection

./: .gitignore  NOTES.md  README.md  Spike-In_METADATA_IX.csv  gblock.py  main.nf  nextflow.config  pyproject.toml
analysis/: GBlockAnalysis.Rmd  amplicon_coverage.csv  asvs_missing_from_controls.csv  make-csvs.sh  spike_in_plots.ipynb  spikein_summary.csv  spikin_counts.csv  spikins_in_0_x_1:10_(Pos).csv  to_plot.csv
analysis/.ipynb_checkpoints/: spike_in_plots-checkpoint.ipynb
analysis/mad4hatter-runs/victoria_results_2024_06_03/: allele_data.txt  amplicon_coverage.txt  sample_coverage.txt
analysis/mad4hatter-runs/victoria_results_2024_06_03/quality_report/: QCplots.Rmd  QCplots.html
analysis/mad4hatter-runs/victoria_results_2024_06_03/raw_dada2_output/: dada2.clusters.txt
analysis/mad4hatter-runs/victoria_results_2024_06_03/resistance_marker_module/: resmarker_microhap_table.txt  resmarker_new_mutations.txt  resmarker_table.txt
analysis/mad4hatter-runs/victoria_results_2024_06_03/run/: parameters.tsv  runtime.tsv
containers/: Dockerfile
envs/: nextflow-env.yml
modules/local/: align_to_reference.nf  create_spikein_table.nf  cutadapt.nf  get-spikein-counts.nf  plot-spikein-counts.nf
resources/: SpikeInRun_10262023.csv  gblocks.csv  primers.tsv  spikein_sequences.fasta
workflows/: demultiplex_amplicons.nf  quality_control.nf  spikein_analysis.nf
